# med-deepscientist

./: .agent-contract-baseline.json  .gitignore  AGENTS.md  MEDICAL_FORK_MANIFEST.json  README.md  README.zh-CN.md  install.sh  package-lock.json  package.json  pyproject.toml
docs/: README.md  architecture.md  decisions.md  docs_portfolio_consolidation.md  invariants.md  medical_fork_baseline.md  project.md  runtime_native_truth_and_outer_loop_input_contract.md  runtime_protocol.md  status.md  upstream_intake.md  upstream_intake_round_2026_04_01.md  upstream_intake_round_2026_04_19.md  upstream_intake_round_2026_04_19_followup.md  upstream_intake_round_2026_04_20.md  upstream_intake_round_2026_04_20_followup.md  upstream_intake_round_2026_05_05.md
scripts/: audit_repo_hygiene.py  build-release.mjs  dedupe_quest_worktree_cold_files.py  maintain_quest_runtime_storage.py  opl-module-healthcheck.sh  repo_hygiene_policy.json  slim_quest_oversized_jsonl.py  verify.sh
tests/: launcher_uv.test.cjs  test_acp_api.py  test_admin_api.py  test_api_contract_surface.py  test_artifact_guidance.py  test_artifact_inventory_surface.py  test_bash_exec_monitor.py  test_benchstore.py  test_benchstore_registry.py  test_codex_cli_compat.py  test_codex_runner.py  test_config_testing.py  test_connector_bridges.py  test_daemon_api.py  test_doctor.py  test_editable_shared_bootstrap.py  test_generic_connectors.py  test_git_branch_canvas.py  test_hermes_native_proof_runner.py  test_init_and_quest.py  test_launcher_status.py  test_mcp_servers.py  test_memory_and_artifact.py  test_migration.py  (+18 more)
(+229 files in other folders)
