[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deepscientist"
version = "1.5.15"
description = "Controlled DeepScientist-derived runtime fork for MedAutoScience compatibility"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "cryptography>=42,<46",
  "lark-oapi>=1.5,<2",
  "mcp>=1.19,<2",
  "opl-harness-shared @ git+https://github.com/gaofeng21cn/one-person-lab.git@8523f4ab76af486d44a1ccd3a88996ca860d2cc2#subdirectory=python/opl-harness-shared",
  "Pillow>=10,<12",
  "PyYAML>=6,<7",
  "rich>=14,<15",
  "textual>=0.80,<1",
  "websockets>=15,<16"
]

[project.optional-dependencies]
acp = [
  "agent-client-protocol>=0.8,<1",
]

[dependency-groups]
dev = [
  "pexpect>=4.9,<5",
  "pytest>=8,<9",
]

[project.scripts]
ds = "deepscientist.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepscientist", "deepscientist.*"]
namespaces = false
